@@ -1,22 +1,5 @@
 package unischedule.event.service;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.doAnswer;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
-
-import java.time.LocalDateTime;
-import java.util.List;
-
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -28,24 +11,51 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.access.AccessDeniedException;
 import unischedule.calendar.entity.Calendar;
 import unischedule.calendar.service.internal.CalendarRawService;
-import unischedule.events.dto.EventUpdateDto;
-import unischedule.events.dto.PersonalEventCreateRequestDto;
+import unischedule.events.domain.Event;
+import unischedule.events.domain.EventOverride;
+import unischedule.events.domain.EventState;
 import unischedule.events.dto.EventCreateResponseDto;
+import unischedule.events.dto.EventOverrideDto;
 import unischedule.events.dto.EventGetResponseDto;
 import unischedule.events.dto.EventModifyRequestDto;
-import unischedule.events.domain.Event;
-import unischedule.events.domain.EventState;
+import unischedule.events.dto.EventServiceDto;
+import unischedule.events.dto.EventUpdateDto;
+import unischedule.events.dto.PersonalEventCreateRequestDto;
+import unischedule.events.dto.RecurringInstanceModifyRequestDto;
+import unischedule.events.service.EventQueryService;
 import unischedule.events.service.PersonalEventService;
+import unischedule.events.service.internal.EventOverrideRawService;
 import unischedule.events.service.internal.EventRawService;
+import unischedule.events.service.internal.RecurringEventRawService;
 import unischedule.exception.EntityNotFoundException;
 import unischedule.exception.InvalidInputException;
 import unischedule.member.domain.Member;
 import unischedule.member.service.internal.MemberRawService;
 import unischedule.team.domain.Team;
 import unischedule.team.domain.TeamMember;
-import unischedule.team.domain.TeamRole;
 import unischedule.team.service.internal.TeamMemberRawService;
 import unischedule.util.TestUtil;
+
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class PersonalEventServiceTest {
@@ -54,9 +64,15 @@ class PersonalEventServiceTest {
     @Mock
     private MemberRawService memberRawService;
     @Mock
+    private RecurringEventRawService recurringEventRawService;
+    @Mock
+    private EventQueryService eventQueryService;
+    @Mock
     private CalendarRawService calendarRawService;
     @Mock
     private TeamMemberRawService teamMemberRawService;
+    @Mock
+    private EventOverrideRawService eventOverrideRawService;
     @InjectMocks
     private PersonalEventService eventService;
 
@@ -102,19 +118,21 @@ class PersonalEventServiceTest {
 
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
         given(calendarRawService.getMyPersonalCalendar(owner)).willReturn(personalCalendar);
+        given(personalCalendar.getCalendarId()).willReturn(calendarId);
 
         doNothing().when(personalCalendar).validateOwner(owner);
-        doNothing().when(eventRawService).validateNoSchedule(eq(owner), any(LocalDateTime.class), any(LocalDateTime.class));
+        doNothing().when(eventQueryService).checkNewSingleEventOverlap(anyList(), any(LocalDateTime.class), any(LocalDateTime.class));
 
         given(eventRawService.saveEvent(any(Event.class))).willReturn(event);
         
         // when
-        EventCreateResponseDto result = eventService.makePersonalEvent(memberEmail, requestDto);
+        EventCreateResponseDto result = eventService.makePersonalSingleEvent(memberEmail, requestDto);
         
         // then
         assertThat(result).isNotNull();
         assertThat(result.title()).isEqualTo("새 회의");
         assertThat(result.description()).isEqualTo("주간 회의");
+        verify(eventQueryService).checkNewSingleEventOverlap(eq(List.of(calendarId)), eq(requestDto.startTime()), eq(requestDto.endTime()));
         verify(eventRawService).saveEvent(any(Event.class));
     }
 
@@ -132,14 +150,17 @@ class PersonalEventServiceTest {
 
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
         given(calendarRawService.getMyPersonalCalendar(owner)).willReturn(personalCalendar);
+        given(personalCalendar.getCalendarId()).willReturn(calendarId);
 
         doThrow(new InvalidInputException("겹치는 일정이 있어 등록할 수 없습니다."))
-                .when(eventRawService).validateNoSchedule(eq(owner), any(LocalDateTime.class), any(LocalDateTime.class));
+                .when(eventQueryService).checkNewSingleEventOverlap(anyList(), any(LocalDateTime.class), any(LocalDateTime.class));
 
         // when & then
-        assertThatThrownBy(() -> eventService.makePersonalEvent(memberEmail, requestDto))
+        assertThatThrownBy(() -> eventService.makePersonalSingleEvent(memberEmail, requestDto))
                 .isInstanceOf(InvalidInputException.class)
                 .hasMessage("겹치는 일정이 있어 등록할 수 없습니다.");
+
+        verify(eventQueryService).checkNewSingleEventOverlap(eq(List.of(calendarId)), eq(requestDto.startTime()), eq(requestDto.endTime()));
     }
 
     @Test
@@ -152,44 +173,51 @@ class PersonalEventServiceTest {
         Team team = TestUtil.makeTeam();
         TeamMember teamMember = TestUtil.makeTeamMember(team, owner);
         Calendar teamCalendar = mock(Calendar.class);
+
         given(teamCalendar.getCalendarId()).willReturn(2L);
         given(personalCalendar.getCalendarId()).willReturn(1L);
 
-        Event event1 = new Event(
-                "회의", "주간 회의",
+        EventServiceDto event1 = new EventServiceDto(
+                1L,
+                "회의",
+                "주간 회의",
                 LocalDateTime.of(2025, 9, 10, 10, 0),
                 LocalDateTime.of(2025, 9, 10, 11, 0),
-                EventState.CONFIRMED, true
+                EventState.CONFIRMED,
+                true,
+                false
         );
 
-        Event event2 = new Event("워크샵", "분기별 워크샵",
+        EventServiceDto event2 = new EventServiceDto(
+                2L,
+                "워크샵",
+                "분기별 워크샵",
                 LocalDateTime.of(2025, 9, 15, 14, 0),
                 LocalDateTime.of(2025, 9, 15, 17, 0),
-                EventState.CONFIRMED, false
+                EventState.CONFIRMED,
+                false,
+                false
         );
 
+        List<Long> calendarIds = List.of(1L, 2L);
 
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
         given(calendarRawService.getMyPersonalCalendar(owner)).willReturn(personalCalendar);
         given(teamMemberRawService.findByMember(owner)).willReturn(List.of(teamMember));
         given(calendarRawService.getTeamCalendar(team)).willReturn(teamCalendar);
-        given(eventRawService.findSchedule(List.of(1L, 2L), start, end))
+
+        given(eventQueryService.getEvents(calendarIds, start, end))
                 .willReturn(List.of(event1, event2));
-        
+
         // when
         List<EventGetResponseDto> result = eventService.getPersonalEvents(memberEmail, start, end);
         
         // then
         assertThat(result).hasSize(2);
-        assertThat(result.getFirst().title()).isEqualTo(event1.getTitle());
-        assertThat(result.get(0).title()).isEqualTo(event1.getTitle());
-        assertThat(result.get(1).title()).isEqualTo(event2.getTitle());
+        assertThat(result.getFirst().title()).isEqualTo(event1.title());
+        assertThat(result.get(1).title()).isEqualTo(event2.title());
 
-        verify(memberRawService).findMemberByEmail(memberEmail);
-        verify(calendarRawService).getMyPersonalCalendar(owner);
-        verify(teamMemberRawService).findByMember(owner);
-        verify(calendarRawService).getTeamCalendar(team);
-        verify(eventRawService).findSchedule(List.of(1L, 2L), start, end);
+        verify(eventQueryService).getEvents(calendarIds, start, end);
     }
 
     @Test
@@ -201,27 +229,101 @@ class PersonalEventServiceTest {
 
         existingEvent.connectCalendar(personalCalendar);
 
-        EventModifyRequestDto requestDto = new EventModifyRequestDto(eventId, "새 제목", "새 내용", null, null, true);
+        EventModifyRequestDto requestDto = new EventModifyRequestDto("새 제목", "새 내용", null, null, true);
 
+        given(personalCalendar.getCalendarId()).willReturn(1L);
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
         given(eventRawService.findEventById(eventId)).willReturn(existingEvent);
 
-        doAnswer(invocation -> {
-            Event event = invocation.getArgument(0);
-            EventUpdateDto dto = invocation.getArgument(1);
-            event.modifyEvent(dto.title(), dto.content(), dto.startTime(), dto.endTime(), dto.isPrivate());
-            return null;
-        }).when(eventRawService).updateEvent(any(Event.class), any(EventUpdateDto.class));
+        doNothing().when(eventQueryService).checkEventUpdateOverlap(anyList(), any(), any(), any());
 
         // when
-        EventGetResponseDto responseDto = eventService.modifyPersonalEvent(memberEmail, requestDto);
+        eventService.modifyPersonalEvent(memberEmail, eventId, requestDto);
 
         // then
-        assertThat(responseDto.title()).isEqualTo("새 제목");
-        assertThat(responseDto.description()).isEqualTo("새 내용");
-        assertThat(responseDto.isPrivate()).isTrue();
+        verify(eventRawService).updateEvent(eq(existingEvent), any(EventUpdateDto.class));
+    }
 
-        verify(eventRawService, never()).canUpdateEvent(any(), any(), any(), any());
+    @Test
+    @DisplayName("반복 일정 날짜 최초 수정 시 EventOverride 생성")
+    void modifyRecurringInstance_CreateNewEventOverride() {
+        // given
+        Long eventId = 1L;
+        Event originalEvent = TestUtil.makeRecurringEvent("반복 회의", "주간 회의");
+        originalEvent.connectCalendar(personalCalendar);
+        LocalDateTime originalStartTime = originalEvent.getStartAt().plusDays(7);
+
+        RecurringInstanceModifyRequestDto requestDto = new RecurringInstanceModifyRequestDto(
+                originalStartTime,
+                "변경된 회의",
+                "내용 변경",
+                originalStartTime.plusHours(1),
+                originalStartTime.plusHours(2),
+                false
+        );
+
+        given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
+        given(eventRawService.findEventById(eventId)).willReturn(originalEvent);
+        given(eventOverrideRawService.findEventOverride(originalEvent, requestDto.originalStartTime()))
+                .willReturn(Optional.empty());
+        given(eventOverrideRawService.saveEventOverride(any(EventOverride.class)))
+                .willAnswer(invocation -> invocation.getArgument(0));
+
+        // when
+        EventGetResponseDto result = eventService.modifyPersonalRecurringInstance(memberEmail, eventId, requestDto);
+
+        // then
+        verify(eventOverrideRawService).saveEventOverride(any(EventOverride.class));
+        assertThat(result.eventId()).isEqualTo(originalEvent.getEventId());
+        assertThat(result.title()).isEqualTo("변경된 회의");
+        assertThat(result.description()).isEqualTo("내용 변경");
+    }
+
+    @Test
+    @DisplayName("반복 일정의 특정 날짜(instance) 재수정 시 기존 EventOverride 업데이트")
+    void modifyRecurringInstance_UpdateExistingOverride() {
+        // given
+        Long eventId = 1L;
+        Event originalEvent = TestUtil.makeRecurringEvent("반복 일정", "주간 회의");
+        originalEvent.connectCalendar(personalCalendar);
+        LocalDateTime originalStartTime = originalEvent.getStartAt().plusDays(7);
+
+        EventOverride existingOverride = spy(EventOverride.makeEventOverride(
+                originalEvent,
+                new EventOverrideDto(originalStartTime, "첫 번째 수정", null, null, null, null)
+        ));
+
+        RecurringInstanceModifyRequestDto requestDto = new RecurringInstanceModifyRequestDto(
+                originalStartTime,
+                "두 번째 수정",
+                "내용도 수정",
+                null,
+                null,
+                null
+        );
+
+        given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
+        given(eventRawService.findEventById(eventId)).willReturn(originalEvent);
+        given(eventOverrideRawService.findEventOverride(originalEvent, requestDto.originalStartTime()))
+                .willReturn(Optional.of(existingOverride));
+        given(eventOverrideRawService.saveEventOverride(any(EventOverride.class)))
+                .willAnswer(invocation -> invocation.getArgument(0));
+
+        doAnswer(invocation -> {
+            EventOverride exception = invocation.getArgument(0);
+            EventOverrideDto dto = invocation.getArgument(1);
+            exception.update(dto.originalStartTime(), dto.title(), dto.content(), dto.startTime(), dto.endTime(), dto.isPrivate());
+            return null;
+        }).when(eventOverrideRawService).updateEventOverride(any(EventOverride.class), any(EventOverrideDto.class));
+
+        // when
+        EventGetResponseDto result = eventService.modifyPersonalRecurringInstance(memberEmail, eventId, requestDto);
+
+        // then
+        verify(eventOverrideRawService).updateEventOverride(any(EventOverride.class), any(EventOverrideDto.class));
+        verify(eventOverrideRawService).saveEventOverride(existingOverride);
+        assertThat(result.title()).isEqualTo("두 번째 수정");
+        assertThat(result.description()).isEqualTo("내용도 수정");
     }
 
     @Test
@@ -233,18 +335,17 @@ class PersonalEventServiceTest {
         Event existingEvent = spy(TestUtil.makeEvent("다른 사람 일정", "내용"));
 
         existingEvent.connectCalendar(personalCalendar);
+        EventModifyRequestDto requestDto = new EventModifyRequestDto("새 제목", null, null, null, null);
 
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
         given(eventRawService.findEventById(eventId)).willReturn(existingEvent);
-
-        EventModifyRequestDto requestDto = new EventModifyRequestDto(eventId, "새 제목", null, null, null, null);
 
         doThrow(new AccessDeniedException("해당 캘린더에 대한 접근 권한이 없습니다."))
                 .when(existingEvent).validateEventOwner(any(Member.class));
 
 
         // when & then
-        assertThatThrownBy(() -> eventService.modifyPersonalEvent(memberEmail, requestDto))
+        assertThatThrownBy(() -> eventService.modifyPersonalEvent(memberEmail, eventId, requestDto))
                 .isInstanceOf(AccessDeniedException.class)
                 .hasMessage("해당 캘린더에 대한 접근 권한이 없습니다.");
     }
@@ -284,5 +385,72 @@ class PersonalEventServiceTest {
                 .isInstanceOf(EntityNotFoundException.class)
                 .hasMessage("해당 일정을 찾을 수 없습니다.");
         verify(eventRawService, never()).deleteEvent(any());
+    }
+    
+    @Test
+    @DisplayName("다가오는 개인 일정 조회 성공")
+    void getUpcomingMyEvent_success() {
+        // given
+        String email = "test@test.com";
+        Member member = new Member(email, "tester", "1234");
+        Event event1 = Event.builder()
+            .title("회의")
+            .content("팀 회의")
+            .startAt(LocalDateTime.now().plusHours(1))
+            .endAt(LocalDateTime.now().plusHours(2))
+            .state(EventState.CONFIRMED)
+            .isPrivate(false)
+            .build();
+        
+        when(memberRawService.findMemberByEmail(email)).thenReturn(member);
+        when(eventRawService.findUpcomingEventsByMember(member)).thenReturn(List.of(event1));
+        
+        // when
+        List<EventGetResponseDto> result = eventService.getUpcomingMyEvent(email);
+        
+        // then
+        verify(memberRawService, times(1)).findMemberByEmail(email);
+        verify(eventRawService, times(1)).findUpcomingEventsByMember(member);
+        
+        assertThat(result).hasSize(1);
+        assertThat(result.getFirst().title()).isEqualTo("회의");
+    }
+    
+    @Test
+    @DisplayName("오늘의 개인 일정 조회 성공")
+    void getTodayMyEvent_success() {
+        // given
+        String email = "today@test.com";
+        Member member = new Member(email, "todayUser", "pw");
+        Event event1 = Event.builder()
+            .title("점심 회의")
+            .content("오늘 점심 회의")
+            .startAt(LocalDateTime.now().withHour(12))
+            .endAt(LocalDateTime.now().withHour(13))
+            .state(EventState.CONFIRMED)
+            .isPrivate(true)
+            .build();
+        Event event2 = Event.builder()
+            .title("스터디")
+            .content("오늘 저녁 스터디")
+            .startAt(LocalDateTime.now().withHour(19))
+            .endAt(LocalDateTime.now().withHour(21))
+            .state(EventState.CONFIRMED)
+            .isPrivate(false)
+            .build();
+        
+        given(memberRawService.findMemberByEmail(email)).willReturn(member);
+        given(eventRawService.findTodayEventsByMember(member)).willReturn(List.of(event1, event2));
+        
+        // when
+        List<EventGetResponseDto> result = eventService.getTodayMyEvent(email);
+        
+        // then
+        verify(memberRawService, times(1)).findMemberByEmail(email);
+        verify(eventRawService, times(1)).findTodayEventsByMember(member);
+        
+        assertThat(result).hasSize(2);
+        assertThat(result.get(0).title()).isEqualTo("점심 회의");
+        assertThat(result.get(1).title()).isEqualTo("스터디");
     }
 }
